# project_mahoraga

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
examples/gemma_demo/: demo.py
mahoraga/: api.py
mahoraga/adapter/: adapter_manager.py  knowledge_base.json
mahoraga/critic/: critic_agent.py
mahoraga/dashboard/: index.html
mahoraga/orchestrator/: maestro_hook.py
mahoraga/trigger/: trigger_evaluator.py
tests/: test_adapter.py  test_critic.py  test_trigger.py
