[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mahoraga"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "bs4",
    "ddgs",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mahoraga*"]
